--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #F76E11;
   transition: 0.5s;
   text-decoration: none;
 }
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #18d26e;
+  background: #F76E11;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #F76E11;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -135,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   letter-spacing: 3px;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #F76E11;
 }
 #header .logo a {
   color: #fff;
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #18d26e;
+  color: #F76E11;
 }
 .navbar .dropdown ul {
   display: block;
@@ -215,7 +215,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #18d26e;
+  color: #F76E11;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #333333;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #18d26e;
+  color: #F76E11;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -323,7 +323,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #18d26e;
+  color: #F76E11;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -445,11 +445,11 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #F76E11;
 }
 #hero .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #F76E11;
 }
 
 /*--------------------------------------------------------------
@@ -486,7 +486,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #F76E11;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -558,7 +558,7 @@ section {
   background-image: linear-gradient(0deg, #000000 0%, #242323 50%, #000000 100%);
 }
 #featured-services i {
-  color: #18d26e;
+  color: #F76E11;
   font-size: 48px;
   display: inline-block;
 }
@@ -571,7 +571,7 @@ section {
   color: #fff;
 }
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #featured-services p {
   font-size: 14px;
@@ -619,7 +619,7 @@ section {
   height: 64px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #F76E11;
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc(50% - 32px);
@@ -639,7 +639,7 @@ section {
   background-color: #fff;
 }
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #F76E11;
 }
 #about .about-col h2 {
   color: #000;
@@ -653,7 +653,7 @@ section {
   color: #000;
 }
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #about .about-col p {
   font-size: 14px;
@@ -677,7 +677,7 @@ section {
   float: left;
 }
 #services .icon i {
-  color: #18d26e;
+  color: #F76E11;
   font-size: 36px;
   line-height: 0;
   transition: 0.5s;
@@ -692,7 +692,7 @@ section {
   color: #111;
 }
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #F76E11;
 }
 #services .description {
   font-size: 14px;
@@ -704,7 +704,7 @@ section {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(255, 0, 0, 0.3), rgba(255, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -731,8 +731,8 @@ section {
   color: #fff;
 }
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #F76E11;
+  border: 2px solid #F76E11;
 }
 
 /* Call To Action Section
@@ -790,7 +790,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #F76E11;
 }
 #facts .counters p {
   padding: 0;
@@ -830,7 +830,7 @@ section {
   transition: all 0.3s ease-in-out;
 }
 #portfolio #portfolio-flters li:hover, #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #F76E11;
   color: #fff;
 }
 #portfolio #portfolio-flters li:last-child {
@@ -880,7 +880,7 @@ section {
   line-height: 0;
 }
 #portfolio .portfolio-item figure .link-preview:hover, #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #F76E11;
 }
 #portfolio .portfolio-item figure .link-preview:hover i, #portfolio .portfolio-item figure .link-details:hover i {
   color: #fff;
@@ -919,7 +919,7 @@ section {
   color: #333;
 }
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #portfolio .portfolio-item .portfolio-info p {
   padding: 0;
@@ -948,10 +948,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #F76E11;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #F76E11;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -1005,10 +1005,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #F76E11;
 }
 #clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #F76E11;
 }
 
 /* Testimonials Section
@@ -1073,10 +1073,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #18d26e;
+  border: 1px solid #F76E11;
 }
 #testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #F76E11;
 }
 
 /* Team Section
@@ -1136,7 +1136,7 @@ section {
   color: #fff;
 }
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #team .member .social i {
   font-size: 18px;
@@ -1156,7 +1156,7 @@ section {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #F76E11;
 }
 #contact .contact-info address, #contact .contact-info p {
   margin-bottom: 0;
@@ -1173,7 +1173,7 @@ section {
   color: #000;
 }
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #contact .contact-address, #contact .contact-phone, #contact .contact-email {
   margin-bottom: 20px;
@@ -1208,7 +1208,7 @@ section {
 #contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: #F76E11;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1226,7 +1226,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #F76E11;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1241,10 +1241,10 @@ section {
   font-size: 15px;
 }
 #contact .php-email-form input::focus, #contact .php-email-form textarea::focus {
-  background-color: #18d26e;
+  background-color: #F76E11;
 }
 #contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: #F76E11;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1294,7 +1294,7 @@ section {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #F76E11;
 }
 #footer .footer-top .footer-info p {
   font-size: 14px;
@@ -1322,7 +1322,7 @@ section {
   font-size: 16px;
 }
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #F76E11;
   color: #fff;
 }
 #footer .footer-top h4 {
@@ -1345,7 +1345,7 @@ section {
   background: #555;
 }
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #F76E11;
   width: 60px;
 }
 #footer .footer-top .footer-links {
@@ -1371,7 +1371,7 @@ section {
   color: #eee;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #F76E11;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1388,7 +1388,7 @@ section {
   width: 65%;
 }
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #18d26e;
+  background: #F76E11;
   border: 0;
   width: 35%;
   padding: 6px 0;
