--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -735,8 +735,8 @@ section {
   border: 2px solid #F76E11;
 }
 
-/* Call To Action Section
---------------------------------*/
+/* Skills Section */
+
 #skills {
   padding: 60px 0;
 }
