--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,6 +582,7 @@ section {
 
 /* About Us Section
 --------------------------------*/
+
 #about {
   background: url("../img/about-bg.jpg") center top no-repeat fixed;
   background-size: cover;
@@ -665,11 +666,24 @@ section {
 
 /* Services Section
 --------------------------------*/
+
 #services {
-  background: #fff;
+  background: url("../img/about-bg.jpg") center top no-repeat fixed;
   background-size: cover;
   padding: 60px 0 40px 0;
+  position: relative;
 }
+
+#services::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.92);
+}
+
 #services .box {
   margin-bottom: 30px;
 }
@@ -735,33 +749,6 @@ section {
   border: 2px solid #F76E11;
 }
 
-/* Skills Section */
-
-#skills {
-  padding: 60px 0;
-}
-#skills .progress {
-  height: 35px;
-  margin-bottom: 10px;
-  border-radius: 0;
-}
-#skills .progress .skill {
-  font-family: "Open Sans", sans-serif;
-  line-height: 35px;
-  padding: 0;
-  margin: 0 0 0 20px;
-  text-transform: uppercase;
-}
-#skills .progress .skill .val {
-  float: right;
-  font-style: normal;
-  margin: 0 20px 0 0;
-}
-#skills .progress-bar {
-  width: 1px;
-  text-align: left;
-  transition: 0.9s;
-}
 
 /* Facts Section
 --------------------------------*/
