--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -715,11 +715,15 @@ section {
   margin-bottom: 0;
 }
 
+
+#merge-paralax {
+  background: linear-gradient(rgba(255, 170, 104, 0.8), rgba(255, 0, 0, 0.1)), url(../img/facts-bg.jpg) fixed center center;
+  background-size: cover;
+}
+
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(255, 0, 0, 0.3), rgba(255, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
-  background-size: cover;
   padding: 60px 0;
 }
 #call-to-action h3 {
@@ -753,20 +757,8 @@ section {
 /* Facts Section
 --------------------------------*/
 #facts {
-  background: url("../img/facts-bg.jpg") center top no-repeat fixed;
-  background-size: cover;
   padding: 60px 0 0 0;
   position: relative;
-}
-#facts::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.88);
-  z-index: 9;
 }
 #facts .container {
   position: relative;
@@ -777,14 +769,15 @@ section {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #F76E11;
+  color: #fff;
 }
 #facts .counters p {
   padding: 0;
   margin: 0 0 20px 0;
   font-family: "Montserrat", sans-serif;
+  font-weight: 500;
   font-size: 14px;
-  color: #111;
+  color: #fff;
 }
 #facts .facts-img {
   text-align: center;
