--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -836,7 +836,11 @@ section {
   opacity: 0.4;
   transition: 0.3s;
 }
-#portfolio .portfolio-item figure .link-preview, #portfolio .portfolio-item figure .link-details {
+
+
+/* LINK PREVIEW */
+
+#portfolio .portfolio-item figure .link-preview {
   position: absolute;
   display: inline-flex;
   align-items: center;
@@ -850,32 +854,28 @@ section {
   border-radius: 50%;
   transition: 0.2s linear;
 }
-#portfolio .portfolio-item figure .link-preview i, #portfolio .portfolio-item figure .link-details i {
+#portfolio .portfolio-item figure .link-preview i {
   font-size: 22px;
   color: #333;
   line-height: 0;
 }
-#portfolio .portfolio-item figure .link-preview:hover, #portfolio .portfolio-item figure .link-details:hover {
+#portfolio .portfolio-item figure .link-preview:hover {
   background: #F76E11;
 }
-#portfolio .portfolio-item figure .link-preview:hover i, #portfolio .portfolio-item figure .link-details:hover i {
+#portfolio .portfolio-item figure .link-preview:hover i {
   color: #fff;
 }
+
+/* LINK PREVIEW */
+
 #portfolio .portfolio-item figure .link-preview {
   left: calc(50% - 38px);
   top: calc(50% - 18px);
 }
-#portfolio .portfolio-item figure .link-details {
-  right: calc(50% - 38px);
-  top: calc(50% - 18px);
-}
+
 #portfolio .portfolio-item figure:hover .link-preview {
   opacity: 1;
   left: calc(50% - 44px);
-}
-#portfolio .portfolio-item figure:hover .link-details {
-  opacity: 1;
-  right: calc(50% - 44px);
 }
 #portfolio .portfolio-item .portfolio-info {
   background: #fff;
